Emergency commit before reworking all html

--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Placeholder title</title>
+        <title>
+            Interesting CSS styles
+        </title>
     </head>
     <body>
-        <h1>Hi, I am a Placeholder Website!</h1>
+        <h1>Quick And Pretty CSS Styles For When You're out of Ideas</h1>
+        <!-- Introduction, why this page is interesting -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        
+        <!-- Minimalistic design descritpion, referencing this page -->
+        <h2>Minimalistic design</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <!-- Some examples of interactive elements -->
+        <button>Boop</button>
 
-        <button id="redirect1"><h3>Another Web Page</h3></button>
-        <script>
-            document.getElementById("redirect1").onclick = function(){
-                location.href = "NewHTMLfile.html"
-            };
-        </script>
+        <!-- Questioning the necessity of CSS -->
+        <h2>Do we even need CSS?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a href="eyesore.html">Link to a page with no CSS</a>
+
+        <!-- Leading up to introducing the designs -->
+        <h2>So here are a few designs that looks more agreeable</h2>
+        <!-- Links to all of the design pages -->
+        <ul>
+            <li><a href="neumorphism.html">Neumorphism</a></li>
+            <li><a href="glassmorphism.html">Glassmorphism</a></li>
+            <li><a href="claymorphism.html">Claymorphism</a></li>
+        </ul>        
+
     </body>
 </html>
-
-<!-- 
-    Upload to partch command (for self):
-    scp -r * u7637604@partch.anu.edu.au:/webusers/u7637604/public_html
- -->
-
-<!-- 
-    Citation:
-    The button script was adopted from 
-    https://stackoverflow.com/questions/16562577/how-can-i-make-a-button-redirect-my-page-to-another-page.
-    I re-wrote it myself to better understand how it works.
- -->
