--- a/NewHTMLfile.html
+++ b/NewHTMLfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Styles/style.css">
         <title>A Web Page lol</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
 
         <script>
             document.getElementById("redirect2").onclick = function(){
-                location.href = "index.html"
+                location.href = "indexLab1.html"
             };
         </script>
 
